# neuromath

./: .gitignore  README.md  index.html
epoc-lsl/: config.py  visualize_fif.py
manim-api/: pyproject.toml  requirements.txt  run.py  test_manim.py
manim-api/app/: main.py  models.py
manim-api/app/routers/: videos.py
manim-api/app/services/: ai_services.py  video_generator.py
manim-api/config/: settings.py
manim-pipeline/: app.py  create_lesson.py
personalized-math/backend/: best_gb  best_xgb  simulated_stream.py  xgb_model.pkl
personalized-math/frontend/: streamlit_app.py
personalized-math/notebooks/: 01_eeg_load_predict.ipynb  Confused Student EEG.ipynb
personalized-math/spline-ui/: index.html  main.js  package-lock.json  package.json  styles.css
