[project]
name = "manim-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "azure-cognitiveservices-speech>=1.43.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "manim>=0.19.0",
    "manim-voiceover>=0.3.7",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.4",
    "python-dotenv>=0.21.1",
    "setuptools>=80.3.1",
    "uvicorn>=0.34.2",
]
